fixing posts bleeding into invites area on ff

--- a/mods/arcade/web/style.css
+++ b/mods/arcade/web/style.css
@@ -349,6 +349,8 @@ body {
   grid-template-columns: 1fr;
   gap: 0.5em;
   margin: 0.5em 0 0 0;
+  z-index: -1;
+  padding: 1em 0 0;
 }
 
 .arcade-infobox {
